<resources>
    <string name="app_name">Paivajarjestys</string>
    <string name="title_today">Today</string>
    <string name="title_week">Week</string>
    <string name="title_notifications">Notifications</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="weekend">Weekend boyo, no work!</string>

    <string name="error_date">Error detected when fetching date</string>

    <string name="eight">8\n--\n10</string>
    <string name="ten">10\n--\n12</string>
    <string name="twelve">12\n--\n14</string>
    <string name="fourteen">14\n--\n16</string>
    <string name="sixteen">16\n--\n18</string>

    <string name="eight_n">8--10</string>
    <string name="ten_n">10--12</string>
    <string name="twelve_n">12--14</string>
    <string name="fourteen_n">14--16</string>
    <string name="sixteen_n">16--18</string>

    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>

    <string name="add_item">Add new entry</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="dialog">Choose day and time of your entry</string>

    <string name="description">Description</string>
    <string name="location">Location</string>

    <string name="dialog_error">Please fill or select all fields</string>
    <string name="dialog_delete_entry">Delete entry</string>
    <string name="dialog_confirm_deletion">Are you sure you want to delete:</string>

    <string name="addview_success">Entry added, refresh views to see it</string>
</resources>
